# lily58-wireless-view-zmk-config

./: .gitignore  build.sh  pyproject.toml  setup_sdk.sh
config/: lily58.conf  lily58.keymap
